--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,3 +5,82 @@ li {
 .logo-pinterest {
     height: 50px;
 }
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    li {
+        transition: transform 0.1s;
+        white-space: nowrap;
+
+        &:active {
+            transform: scale(0.9);
+        }
+    }
+
+    &-left {
+        display: flex;
+        align-items: center;
+
+        li {
+            font-weight: 600;
+            padding: 10px;
+            margin: 10px;
+
+            &:hover {
+                background-color : rgb(205, 205, 205);
+                border-radius: 5px;
+            }
+        }
+    }
+
+    &-middle {
+        display: flex;
+
+        li {
+            margin: 10px;
+            font-weight: 600;
+
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }    
+    }
+
+    &-right {
+        display: flex;
+        align-items: center;
+
+
+        li {
+            margin: 10px;
+            font-weight: 600;
+        }
+
+        li:first-child {
+            border: red solid 2px;
+            padding: 10px;
+            border-radius: 30px;
+            padding: 10px 20px 10px 20px;
+            align-items: center;
+            background-color: red;
+            color: white;
+        }
+
+        li:nth-child(2) {
+            border-radius: 30px;
+            padding: 10px 20px 10px 20px;
+            align-items: center;
+            background-color: rgb(234, 234, 234);
+        }
+    }
+}
+
+.nav-middle-right {
+    display: flex;
+    align-items: center;
+
+}
